--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
 # Node modules
 node_modules/
 
-# Logs
-logs
-*.log
+# Environment variables
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+
+# Build files
+dist/
+build/
+out/
+
+# Cache files
+.cache/
+.eslintcache
+.sass-cache/
+
+# Editor directories and files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# System files
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+debug.log
 
-# OS
-.DS_Store
-
-# Build
-/dist
-/build
-
-# Misc
-.env
-*.env
-
-# VSCode
-.vscode/
+# Coverage directory
+coverage/
