--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,19 @@
-# Node modules
+# Dependency directories
 node_modules/
 
 # Environment variables
 .env
-.env.local
-.env.development
-.env.test
-.env.production
-
-# Build files
-dist/
-build/
-out/
-
-# Cache files
-.cache/
-.eslintcache
-.sass-cache/
 
 # Editor directories and files
-.vscode/
 .idea/
-*.sublime-project
-*.sublime-workspace
-
-# System files
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .DS_Store
-Thumbs.db
-ehthumbs.db
-Desktop.ini
 
-# Debug logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-debug.log
-
-# Coverage directory
-coverage/
+# Build outputs
+dist/
+build/
