--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "focus-todo-with-copilot",
   "version": "1.0.0",
-  "description": "A Focus To-Do alike application built with Vanilla JavaScript",
+  "description": "A clone of the Focus To-Do application built with vanilla JavaScript",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint src/js",
-    "format": "prettier --write \"src/**/*.{js,css,html}\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "todo",
+    "pomodoro",
+    "productivity"
+  ],
   "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^3.0.0"
-  }
+  "license": "MIT"
 }
